Fix letter spacing

--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -459,7 +459,7 @@ p {
   align-self: center;
   margin-top: 40px;
   z-index: 100;
-  letter-spacing: -1px;
+  letter-spacing: 0px;
 
   color: #222222 !important;
 
